# glow-app

./: pyproject.toml  requirements.txt
src/: main.py
src/client/domain/: client.py
src/lib/: py_object_id.py
src/lib/config/ext/: mongo_config.py
src/lib/security/: password_hash.py
src/modules/auth/application/: auth_service_impl.py
src/modules/auth/domain/: auth_errors.py
src/modules/auth/infrastructure/: auth_fastapi_router.py
src/modules/bills/application/: subscription_service_impl.py
src/modules/bills/domain/: bill.py  bill_repository.py
src/modules/category/application/: category_service_impl.py
src/modules/category/domain/: category.py  category_repository.py
src/modules/category/infrastructure/: category_fastapi_router.py  category_mongo_repository.py
src/modules/client/application/: client_service_impl.py
src/modules/client/domain/: client.py  client_repository.py
src/modules/client/infrastructure/: client_fastapi_router.py  client_mongo_repository.py
src/modules/invoice/application/: invoice_service_impl.py
src/modules/invoice/domain/: invoice.py  invoice_repository.py
src/modules/invoice/infrastructure/: invoice_fastapi_router.py  invoice_mongo_repository.py
src/modules/payment_history/domain/: payment_history.py  payment_history_repository.py
src/modules/service/application/: service_service_impl.py
src/modules/service/domain/: service.py  service_repository.py
src/modules/shop/application/: shop_service_impl.py
src/payment_history/infrastructure/: payment_history_mongo_repository.py
src/user/domain/: user.py
(+23 files in other folders)
