[project]
name = "glow-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argon2-cffi>=25.1.0",
    "bson~=0.5.10",
    "cffi>=1.17.1",
    "fastapi~=0.116.0",
    "pip>=25.1.1",
    "pydantic[email]~=2.11.7",
    "pydantic-core~=2.33.2",
    "pymongo~=4.13.2",
    "python-dotenv~=1.1.1",
    "setuptools>=80.9.0",
    "uvicorn>=0.35.0",
    "joserfc>=1.2.1",
    "pyjwt>=2.10.1",
]
